qr code and buttons

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                         <img class="grid-item" src="image/vegetable.jpeg" alt="vegetable curry">
                         <h3 class="centertext">Vegetable Curry</h3>
                     </div>
+
+
+                    <div>
+                        <img src="image/image.png" alt = "wr code  ">
+
+                    </div>
                 </div>
             </div>
 
@@ -147,6 +153,11 @@
             <h2>Prata Eating Simulator</h2>
             <div>
                 <canvas id="board">Prata Eating Simulator</canvas>
+                <button id = "button1">up</button>
+                <button  id = "button2">down</button>
+                <button  id = "button3">left</button>
+                <button  id = "button4">right</button>
+
             </div>
         </div>
     </div>
