game fixes and reset button

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
             <h2>Prata Eating Simulator</h2>
             <div>
             <canvas id="board">Prata Eating Simulator</canvas>
-                <button id = "button1">up</button>
-                <button  id = "button2">down</button>
-                <button  id = "button3">left</button>
-                <button  id = "button4">right</button>
-
+                <button id = "button1">Up</button>
+                <button  id = "button2">Down</button>
+                <button  id = "button3">Left</button>
+                <button  id = "button4">Right</button>
+                <button id="resetButton">Reset</button>
 
             </div>
         </div>
