button position changes

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <!--    Page 3     -->
         <div class="page" id="page3">
             <h2>Prata Eating Simulator</h2>
-            <div>
+            <div id="game">
             <canvas id="board">Prata Eating Simulator</canvas>
                 <button id = "button1">Up</button>
                 <button  id = "button2">Down</button>
