--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
                     <div>
-                        <img src="image/image.png" alt = "wr code  ">
+                        <img src="image/image.png" alt = "qr code  ">
 
                     </div>
                 </div>
